[workspace]
members = ["xtask", "lib/*"]

[workspace.package]
authors = ["Johan Planchon <johan@planchon.dev>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
license-file = "LICENSE"

[workspace.dependencies]
# Cli builder
clap = "4.0.8"
# Error handling
eyre = "0.6"
color-eyre = "0.6"
# Helper to run linux commands
duct = "0.13"
# Error creation
thiserror = "1.0"
# Binary Parser
nom = "7.1"
# Bit Vectors
bitvec = "1"

[profile.release]
lto = 'fat'
opt-level = 3
debug-assertions = false